# driftwatch

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml  e2e.yml
api/: .env.example  Cargo.toml
api/benches/: cache_bench.rs  database_bench.rs  serialization_bench.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs
api/src/: auth.rs  cache.rs  config.rs  lib.rs  loaders.rs  main.rs  migrations.rs
api/src/entities/: alert.rs  api_token.rs  benchmark.rs  branch.rs  flamegraph.rs  measure.rs  metric.rs  mod.rs  project.rs  report.rs  testbed.rs  threshold.rs
api/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
api/src/graphql/types/: alert.rs  api_token.rs  benchmark.rs  branch.rs  measure.rs  metric.rs  mod.rs  project.rs  report.rs  testbed.rs  threshold.rs
api/tests/: api_e2e_test.rs  schema.sql
api/tests/common/: mod.rs
cli/: Cargo.toml
cli/src/: api.rs
cli/src/commands/: auth.rs  run.rs
cli/tests/: cli_e2e.rs
crates/driftwatch-api/src/: auth.rs  grpc.rs  lib.rs
crates/driftwatch-api/src/graphql/: mutation.rs  query.rs
crates/driftwatch-api/src/graphql/types/: auth.rs  mod.rs
crates/driftwatch-api/tests/common/: mod.rs
crates/driftwatch-cli/tests/: cli_e2e.rs
e2e/: dashboard.spec.ts  full-flow.spec.ts  home.spec.ts  navigation.spec.ts  projects.spec.ts  user-actions.spec.ts
e2e/graphql/: alerts.spec.ts  api-tokens.spec.ts  auth.spec.ts  github.spec.ts  helpers.ts  perf.spec.ts  projects.spec.ts  reports.spec.ts  thresholds.spec.ts
e2e/user-actions/: actions.ts  assertions.ts  index.ts  runner.ts  selectors.ts  types.ts
e2e/workflows/: complete-user-flow.yaml
scripts/: init-db.sql
server/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml
server-svelte/: .env.example  package-lock.json  package.json
server-svelte/e2e/: auth.spec.ts  home.spec.ts  workspaces.spec.ts
server-svelte/prisma/: schema.prisma
server-svelte/src/: app.css  app.d.ts  hooks.server.ts
server-svelte/src/lib/: auth-client.ts
server-svelte/src/lib/components/: user-menu.svelte
server-svelte/src/lib/components/ui/: alert-dialog.svelte  button.svelte  card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte  index.ts  input.svelte  label.svelte  select.svelte  switch.svelte
server-svelte/src/lib/server/: auth.ts  cache.ts  graphql.ts
server-svelte/src/lib/server/db/: prisma.ts  queries.ts
server-svelte/src/lib/server/services/: threshold.ts
server-svelte/src/lib/server/storage/: index.ts
server-svelte/src/routes/: +layout.svelte  +page.svelte
server-svelte/src/routes/(auth)/: +layout.server.ts
server-svelte/src/routes/(auth)/login/: +page.svelte
server-svelte/src/routes/(auth)/register/: +page.svelte
server-svelte/src/routes/(dashboard)/: +layout.server.ts  +layout.svelte
server-svelte/src/routes/(dashboard)/workspaces/: +page.server.ts  +page.svelte
server-svelte/src/routes/(dashboard)/workspaces/[slug]/: +page.server.ts  +page.svelte
server-svelte/src/routes/(dashboard)/workspaces/[slug]/settings/: +page.server.ts  +page.svelte
server-svelte/src/routes/(dashboard)/workspaces/[slug]/thresholds/new/: +page.server.ts  +page.svelte
server-svelte/src/routes/(dashboard)/workspaces/new/: +page.server.ts  +page.svelte
server-svelte/src/routes/api/auth/[...all]/: +server.ts
server/prisma/: schema.prisma
server/src/app/: page.tsx
server/src/app/(auth)/register/: page.tsx
server/src/app/(dashboard)/workspaces/[slug]/settings/: actions.ts  page.tsx
server/src/app/(dashboard)/workspaces/[slug]/thresholds/new/: actions.ts  page.tsx
server/src/app/api/auth/[...all]/: route.ts
server/src/app/api/flamegraphs/[id]/: route.ts
server/src/components/: benchmark-chart.tsx  flamegraph-viewer.tsx  reports-list.tsx
server/src/components/auth/: login-button.tsx  login-form.tsx  register-form.tsx  user-menu.tsx
server/src/components/ui/: select.tsx  switch.tsx
server/src/lib/: auth-client.ts  auth.ts
server/src/lib/db/: prisma.ts  queries.ts
server/src/lib/graphql/: context.ts  mutations.ts  schema.ts
server/src/lib/services/: github.test.ts  github.ts
server/src/lib/storage/: index.ts
server/supabase/: config.toml
