[workspace]
resolver = "2"
members = [
    "crates/driftwatch-api",
    "crates/driftwatch-api/migration",
    "crates/driftwatch-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/driftwatch"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# GraphQL
async-graphql = { version = "7", features = ["chrono", "dataloader"] }
async-graphql-axum = "7"

# Database
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Utils
sha2 = "0.10"
hex = "0.4"
moka = { version = "0.12", features = ["future"] }
urlencoding = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
dirs = "5"
regex = "1"
open = "5"
tokio-util = { version = "0.7", features = ["codec"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Internal crates
driftwatch-api = { path = "crates/driftwatch-api" }

# TSA crates (from git)
tsa = { git = "https://github.com/alexchoi0/tsa.git", default-features = false }
tsa-core = { git = "https://github.com/alexchoi0/tsa.git" }
tsa-adapter = { git = "https://github.com/alexchoi0/tsa.git" }
tsa-adapter-seaorm = { git = "https://github.com/alexchoi0/tsa.git" }
tsa-token = { git = "https://github.com/alexchoi0/tsa.git" }
tsa-session = { git = "https://github.com/alexchoi0/tsa.git" }

# Dev dependencies
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
