[package]
name = "driftwatch-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# GraphQL
async-graphql = { version = "7", features = ["chrono", "dataloader"] }
async-graphql-axum = "7"

# Database
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
] }

# Auth
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"

# Caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
ctor = "0.2"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "database_bench"
harness = false

[workspace]
members = [".", "migration"]
