[package]
name = "rabbitbench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rabbitbench"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Config
toml = "0.8"
dirs = "5"

# Parsing
regex = "1"

# Browser auth
open = "5"
tokio-util = { version = "0.7", features = ["codec"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
